# egomem

./: .gitignore  BIBLIOGRAPHY.md  INVESTOR_ONEPAGER.md  LICENSE  POSITIONING.md  PROGRESS.md  README.md  RESULTS.md
.github/workflows/: ci.yml
experiments/: README.md
experiments/2026-06-13_arkit-oov/: arkit_detector.py  arkit_loader.py  config.json
experiments/2026-06-13_oov-recall/: metrics_seed0.json  metrics_seed0_drift0.05.json  metrics_seed0_drift0.15.json  metrics_seed1.json  metrics_seed1_drift0.05.json  metrics_seed1_drift0.15.json  metrics_seed2.json  metrics_seed2_drift0.05.json  metrics_seed2_drift0.15.json  run_experiment.py
experiments/2026-06-14_task-success/: fetch_task.py  metrics.json
experiments/2026-06-15_spatial-qa/: make_figure.py  metrics.json  metrics_pro.json  real_mem.py  spatial_qa.py
lib/: README.md  pyproject.toml
lib/egomem/: __init__.py  cli.py  memory.py  sim.py
lib/tests/: test_egomem.py
paper/: paper.md
research/: README.md  design.md  design_h2.md  design_h3.md  hypothesis.md  hypothesis_h10.md  hypothesis_h11.md  hypothesis_h2.md  hypothesis_h3.md  hypothesis_h4.md  hypothesis_h5.md  hypothesis_h6.md  hypothesis_h8.md  hypothesis_h9.md  landscape.md
