[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "egomem"
version = "0.3.0"
description = "A model-agnostic memory layer for robotics from egocentric human video"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mandar Wagh" }]
keywords = ["robotics", "memory", "egocentric", "vla", "world-model", "embodied-ai", "lerobot"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/mandarwagh9/egomem"
Repository = "https://github.com/mandarwagh9/egomem"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
egomem = "egomem.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["egomem*"]
